# lomiri

./: AUTHORS  CMakeLists.txt  CODING  ChangeLog  README.md  clickable.json  clickable.yaml
data/: CMakeLists.txt  com.ubports.Lomiri.gschema.xml  indicators-client.desktop.in.in  lomiri-greeter-wrapper  lomiri-greeter.desktop.in.in  lomiri.desktop.in.in
data/systemd-user/: CMakeLists.txt  Xwayland.lomiri  Xwayland.lomiri.in  lomiri-MODE.service.in  lomiri-systemd-wrapper  lomiri-systemd-wrapper.in  lomiri.target
debian/: changelog  control  lomiri-greeter.install  lomiri-private.install  lomiri-tests.install  lomiri.install  lomiri.migrations  rules  ubports.depends  ubports.skip_distro
include/: paths.h.in
plugins/: CMakeLists.txt
plugins/Aethercast/: CMakeLists.txt  aethercast_device.cpp  aethercast_manager.cpp  device.h  devicemodel.cpp  devicemodel.h  displays.cpp  displays.h  freedesktop_objectmanager.cpp  freedesktop_properties.cpp  plugin.cpp
plugins/LightDM/IntegratedLightDM/liblightdm/: CMakeLists.txt  GreeterPrivate.cpp  UsersModel.cpp  UsersModel.h  UsersModelPrivate.h
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  (+114 more)
qml/: CMakeLists.txt  DeviceConfiguration.qml  DisabledScreenNotice.qml  ErrorApplication.qml  OrientedShell.qml  Shell.qml  ShellApplication.qml  ShellScreen.qml
qml/ApplicationMenus/: ApplicationMenuItemFactory.qml  ApplicationMenusLimits.qml  MenuBar.qml  MenuItem.qml  MenuPopup.qml  RegisteredApplicationMenuModel.qml
qml/Components/: Background.qml  BackgroundBlur.qml  BlurLayer.qml  BrightnessControl.qml  Dialogs.qml  DragHandle.qml  DraggingArea.qml  EdgeDragEvaluator.qml  FadingLabel.qml  Flickable.qml  GestureAreaSizeHint.qml  GridView.qml  Handle.qml  InputMethod.qml  ItemGrabber.qml  ItemSnapshot.qml  KeyboardShortcutsOverlay.qml  KeymapSwitcher.qml  LazyImage.qml  ListView.qml  ListViewOSKScroller.qml  Lockscreen.qml  ModeSwitchWarningDialog.qml  NotificationAudio.qml  PassphraseLockscreen.qml  PinLockscreen.qml  PinPadButton.qml  Rating.qml  RatingStyle.qml  ScreenshotEditor.qml  ScrollCalculator.qml  SharingPicker.qml  ShellDialog.qml  Showable.qml  StandardAnimation.qml  UDFPSDimmer.qml  VirtualTouchPad.qml  VolumeControl.qml  Wallpaper.qml  WallpaperResolver.qml  (+3 more)
qml/Components/PanelState/: PanelState.qml
qml/Components/SearchHistoryModel/: SearchHistoryModel.qml
qml/Greeter/: ButtonPrompt.qml  Circle.qml  Clock.qml  ClockPinPrompt.qml  CoverPage.qml  DelayedLockscreen.qml  FullLightDMImpl.qml  Greeter.qml  GreeterPrompt.qml  GreeterView.qml  Infographics.qml  IntegratedLightDMImpl.qml  LightDMService.qml  LoginAreaContainer.qml  LoginList.qml  NarrowView.qml  ObjectPositioner.qml  PinPrompt.qml  PromptList.qml  SecondaryGreeter.qml  SessionIcon.qml  SessionsList.qml  ShimGreeter.qml  TextPrompt.qml  WideView.qml
qml/Launcher/: BackgroundBlur.qml  Drawer.qml  FoldingLauncherDelegate.qml  Launcher.qml  LauncherDelegate.qml  LauncherPanel.qml  PullToRefreshScopeStyle.qml  Tooltip.qml
qml/Notifications/: Notification.qml  NotificationButton.qml  NotificationMenuItemFactory.qml  Notifications.qml  OptionToggle.qml  ShapedIcon.qml  SwipeToAct.qml
qml/Panel/: ActiveCallHint.qml  FakePanelMenu.qml  MenuContent.qml  Panel.qml  PanelBar.qml  PanelItemRow.qml  PanelMenu.qml  PanelMenuPage.qml  PanelVelocityCalculator.qml
qml/Panel/Indicators/: IndicatorBase.qml  IndicatorItem.qml  IndicatorMenuItemFactory.qml  IndicatorsLight.qml  MessageMenuItemFactory.qml
qml/Panel/Indicators/client/: IndicatorRepresentation.qml  IndicatorsClient.qml  IndicatorsList.qml  IndicatorsTree.qml
qml/Panel/WithCutouts/LomiriPanel/: Panel.qml  PanelBar.qml  PanelItemRow.qml  PanelMenu.qml  qmldir
qml/Panel/WithoutCutouts/LomiriPanel/: Panel.qml  PanelBar.qml  PanelItemRow.qml  PanelMenu.qml
qml/Rotation/: HalfLoopRotationAnimation.qml  ImmediateRotationAction.qml  NinetyRotationAnimation.qml  RotationStates.qml  UpdateShellTransformations.qml
qml/Stage/: ApplicationWindow.qml  ChildWindow.qml  ChildWindowRepeater.qml  ChildWindowTree.qml  DecoratedWindow.qml  MainViewStyle.qml  MoveHandler.qml  OrientationChangeAnimation.qml  PromptSurfaceAnimations.qml  ResizeGrip.qml  Stage.qml  StageMaths.qml  StagedFullscreenPolicy.qml  SurfaceContainer.qml  TabletSideStageTouchGesture.qml  WindowControlsOverlay.qml  WindowDecoration.qml  WindowInfoItem.qml  WindowResizeArea.qml  WindowStateSaver.qml  WindowedFullscreenPolicy.qml  WorkspaceSwitcher.qml
qml/Stage/Spread/: BezierCurve.qml  OpacityMask.qml  ScreensAndWorkspaces.qml  Spread.qml  SpreadDelegateInputArea.qml  SpreadMaths.qml  StagedRightEdgeMaths.qml  WindowedRightEdgeMaths.qml  WorkspacePreview.qml  Workspaces.qml
qml/Tutorial/: InactivityTimer.qml  Tutorial.qml  TutorialContent.qml  TutorialLeft.qml  TutorialLeftLong.qml  TutorialPage.qml  TutorialRight.qml  TutorialTop.qml
qml/Wizard/: CheckableSetting.qml  Page.qml  Pages.qml  PasswordMeter.qml  StackButton.qml  Wizard.qml  WizardItemSelector.qml  WizardTextField.qml
qml/Wizard/Components/: InputMethod.qml
qml/Wizard/Pages/: 10-welcome-update.qml  10-welcome.qml  11-changelog.qml  20-keyboard.qml  30-wifi.qml  50-timezone.qml  60-account.qml  70-passwd-type.qml  78-firmware-update.qml.disabled  79-system-update.qml  80-finished.qml  passcode-confirm.qml  passcode-desktop.qml  passcode-set.qml  password-set.qml  sim.qml
src/: CMakeLists.txt  DebuggingController.cpp  DebuggingController.h  DisplayConfigurationStorage.cpp  DisplayConfigurationStorage.h  LomiriApplication.cpp  LomiriApplication.h  LomiriCommandLineParser.cpp  MouseTouchAdaptor.cpp  RootState.h  (+2 more)
tests/mocks/Wizard/: CMakeLists.txt  MockSystem.cpp  MockSystem.h
tests/utils/modules/Lomiri/SelfTest/: CMakeLists.txt  LomiriTestCase.qml  MouseTouchEmulationCheckbox.qml  StageTestCase.qml
(+270 files in other folders)
